Fix z-indexing

--- a/docs/global_style.css
+++ b/docs/global_style.css
@@ -299,6 +299,7 @@ a.ag-btn:disabled {
     box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.2);
     border-radius: var(--message-block-radius);
     background-color: rgba(255, 255, 255, 0.5);
+    z-index: 10;
 }
 
 .ag-message-block * {
@@ -309,7 +310,7 @@ a.ag-btn:disabled {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 1; /* Appear in front of parent element */
     width:100%;
     height:100%;
     border-radius: var(--message-block-radius);
@@ -320,13 +321,12 @@ a.ag-btn:disabled {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    z-index: -1; /* Appear behind parent element */
     width: 100%;
     height: 100%;
     border-radius: var(--message-block-radius);
     background-size: fill;
     background-repeat: no-repeat;
-    /* background-color: black; */
 }
 
 .ag-message-block-header {
@@ -442,6 +442,6 @@ a.ag-btn:disabled {
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
-    z-index: 2;
+    z-index: 20;
     /* box-shadow: 0 0 25px 50px rgba(0,0,0,0.5); */
 }
